Fix alternative translation path building

BUG: 316924

Test Plan: Tested manually

Differential Revision: https://phabricator.kde.org/D24296